--- a/static/style.css
+++ b/static/style.css
@@ -198,10 +198,11 @@ nav ul li a:hover::after {
 }
 
 .product-gallery img {
-    width: 28%;
+    width: 20%;
     margin-bottom: 20px;
     border-radius: 8px;
     transition: transform 0.3s ease;
+    object-fit: cover;
     /* Menambahkan efek transisi pada transformasi */
 }
 
@@ -209,6 +210,7 @@ nav ul li a:hover::after {
     transform: translateY(-5px);
     /* Bergerak ke atas sedikit saat dihover */
 }
+
 /* produk end */
 
 /* about start */
@@ -261,6 +263,7 @@ nav ul li a:hover::after {
 .owners-list li {
     margin-bottom: 5px;
 }
+
 /* about end */
 
 /* team start */
@@ -365,6 +368,7 @@ nav ul li a:hover::after {
     cursor: pointer;
     padding: 15px;
 }
+
 /* team end */
 
 /* kontak & footer star */
@@ -496,101 +500,6 @@ form btn2 {
     display: block;
 }
 
-/* kontak & footer end */
-/* Footer */
-.footer-content {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.logo-footer {
-    margin-top: 30px;
-    height: auto;
-    width: 120px;
-    font-size: xx-large;
-    font-weight: bold;
-    color: #fff;
-}
-
-.logo-section p {
-    width: 200px;
-    margin-top: 10px;
-    font-size: 14px;
-    color: #fff;
-}
-
-.company-sections {
-    width: 70%;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin-top: 30px;
-}
-
-.company-section {
-    flex: 1;
-    margin-right: 20px;
-    max-width: 200px;
-}
-
-.company-section:last-child {
-    margin-right: 0;
-}
-
-.company-section h2 {
-    margin-left: 5px;
-    font-size: 20px;
-    color: #080808;
-}
-
-.company-section ul {
-    list-style: none;
-    padding: 5px;
-    margin: 10px 0;
-}
-
-.company-section li {
-    font-size: 14px;
-    margin-bottom: 15px;
-}
-
-.company-section a {
-    text-decoration: none;
-    color: #fff;
-}
-
-.company-section .email-footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #f5f5f562;
-    padding: 7px 20px;
-    border-radius: 5px;
-}
-
-.email-footer a {
-    text-decoration: none;
-    color: #F5F5F5;
-}
-
-.email-footer .arrow-icon {
-    margin-left: 10px;
-}
-
-.copyright {
-    margin-top: 200px;
-    color: #fff;
-}
-
-footer {
-    background-color: #fd1616a8;
-    color: #fff;
-    padding: 20px 0;
-}
 
 /* Responsive */
 @media only screen and (max-width: 768px) {
@@ -655,10 +564,67 @@ footer {
 
 @media only screen and (max-width: 600px) {
 
+    #header {
+        background-image: url(/static/images/PhoneBG2.png);
+    }
+
+    .logo {
+        margin-left: 18px;
+    }
+
     /* Header */
     .header-text {
         width: 90%;
-        margin-top: 10vh;
+        margin-left: 25px;
+        margin-top: 2vh;
+    }
+
+    /* produk */
+    #product {
+        width: 100%;
+        height: 50vh;
+    }
+
+    .head-product {
+        font-size: xx-large;
+        /* Adjusted font size for smaller screens */
+    }
+
+    .product-gallery img {
+        width: 30%;
+        height: auto;
+
+    }
+
+    /* about */
+    .company-description {
+        margin-top: 20px;
+        max-width: 85%;
+    }
+
+    /* our team */
+    #body-5 {
+        height: 135vh;
+    }
+
+    .review-card {
+        width: 50%;
+        height: auto;
+        margin-top: 10px;
+    }
+
+    .profile-info {
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    .card-box {
+        width: 100%;
+        /* Full width on small screens */
+    }
+
+    .button-container {
+        margin: 0;
     }
 
     .email-container {
