360px max-width

--- a/templates/index.html
+++ b/templates/index.html
@@ -220,7 +220,7 @@
             <div class="contact-right">
                 <h1 style="color: #080808; font-size: x-large; font-weight: bold; margin-top: 42px;" >Kotak Saran!</h1>
                 <form name="submit-to-google-sheet" id="contactForm">
-                <textarea name="Message"id="messageInput" rows="5" placeholder="Saran Kamu!"></textarea>
+                <textarea name="Message"id="messageInput" rows="5" placeholder="Saran Kamu!" class="kotak-saran"></textarea>
                 <span id="msg" class="pesan-sukses"></span>
                 <button type="submit" class="btn btn2" id="submitBtn"">
                   <span class="loader" id="loader"></span>
