--- a/static/style.css
+++ b/static/style.css
@@ -679,3 +679,122 @@ form btn2 {
         margin-top: 30px;
     }
 }
+
+@media only screen and (max-width: 360px) {
+
+    #header {
+        background-image: url(/static/images/PhoneBG2.png);
+    }
+
+    .logo {
+        margin-left: 18px;
+    }
+
+    /* Header */
+    .header-text {
+        width: 90%;
+        margin-left: 25px;
+        margin-top: 2vh;
+    }
+
+    .header-text h1 {
+        font-size: 20px;
+    }
+
+    /* produk */
+    #product {
+        width: 100%;
+        height: 50vh;
+    }
+
+    .head-product {
+        font-size: large;
+        /* Adjusted font size for smaller screens */
+    }
+
+    .product-gallery img {
+        width: 30%;
+        height: auto;
+
+    }
+
+    /* about */
+    .company-description {
+        margin-top: 20px;
+        max-width: 85%;
+    }
+
+    /* our team */
+    #body-5 {
+        height: 140vh;
+    }
+
+    .review-card {
+        width: 50%;
+        height: auto;
+        margin-top: 10px;
+    }
+
+    .profile-info {
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    .card-box {
+        width: 100%;
+        /* Full width on small screens */
+    }
+
+    .button-container {
+        margin: 0;
+    }
+
+    .email-container {
+        margin-top: 15vh;
+    }
+
+    .email-access,
+    .early-access {
+        font-size: 14px;
+        padding: 8px 20px;
+        margin-left: 0;
+    }
+
+    .button-container {
+        padding: 15px;
+    }
+
+    .buttonl,
+    .buttonr {
+        font-size: 20px;
+        padding: 10px;
+    }
+
+    .review-card {
+        width: 100%;
+        max-width: none;
+        margin-top: 10px;
+    }
+
+    /* Footer */
+    .footer-content {
+        padding: 15px;
+    }
+
+    .company-section,
+    .logo-section p {
+        flex: 0 0 100%;
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+
+    .company-section:last-child,
+    .footer-content {
+        margin-right: 0;
+    }
+
+    .kotak-saran {
+        width: 300px;
+    }
+
+}
